fix(blog): fix z-index (#52)
* fix(blog): fix z-index

* feat(ui): add scroll margin top

--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -57,7 +57,7 @@
   }
 
   * {
-    @apply border-border scroll-smooth;
+    @apply border-border scroll-smooth scroll-mt-32;
   }
 
   body {
